<resources>
    <string name="app_name">ToDoList</string>
    <string name="todo">TODO</string>
    <string name="description">description</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="main">main</string>
    <string name="title">title</string>
    <string name="delete">delete</string>
    <string name="done">done</string>
    <string name="restore">restore</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
</resources>