<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/cardViewStyle">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/main_fragment_recycler_item_image_view"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_80dp"
            android:src="@drawable/anig"
            android:layout_margin="@dimen/_3dp"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/delete_btn"
            app:layout_constraintEnd_toStartOf="@+id/mainFragmentRecyclerItemTextView"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/mainFragmentRecyclerItemTextView"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:text="@string/title"
            android:visibility="visible"
            android:gravity="center"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold"
            android:textColor="#515151"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/delete_btn"
            app:layout_constraintStart_toEndOf="@+id/main_fragment_recycler_item_image_view" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_btn"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginStart="@dimen/_5dp"
            android:text="@string/delete"
            android:visibility="visible"
            android:backgroundTint="@color/lazy_red"
            app:layout_constraintEnd_toStartOf="@id/restore_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentRecyclerItemTextView"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/restore_btn"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginStart="@dimen/_5dp"
            android:text="@string/restore"
            android:visibility="visible"
            android:backgroundTint="@color/lazy_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentRecyclerItemTextView"/>
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_marginEnd="@dimen/recycler_item_line_margin_end"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restore_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>